# nccli

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  build.sh  install.sh  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: release.yml
nccli/: __init__.py  cli.py
nccli/commands/: commit.py  config_cmd.py  download_dns.py  hello.py  help_cmd.py  info.py  proxy.py  upgrade.py  upload_dns.py  welcome.py
nccli/utils/: config.py  hosts_parser.py  hosts_writer.py  mongodb.py
ubuntu_welcome_screen/: config.env  motd-template.sh  setup-welcome-screen.sh
